style(Tabs): set transparent color on button to prevent  flickering on tap

--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -26,6 +26,7 @@ div.tabsContainer > button {
   border: none;
   width: 50px;
   color: white;
+  -webkit-tap-highlight-color: transparent;
 }
 
 div.tabsContainer > button:active {
